# sven-family

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/admin-backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/admin-backend/alembic/: env.py
backend/admin-backend/app/: main.py
backend/admin-backend/app/api/v1/: analytics.py  auth.py  community.py  crawler.py  dashboard.py  memberships.py  orders.py  router.py  settings.py  site_analytics.py
backend/admin-backend/app/core/: config.py  database.py  redis.py
backend/admin-backend/app/middleware/: audit.py  auth.py  idempotency.py  ratelimit.py
backend/admin-backend/app/models/: admin.py
backend/admin-backend/app/services/: crawler_executor.py  crawler_job_executor.py  crawler_job_meta.py  crawler_scheduler.py
backend/community-backend/: .env  Dockerfile  auth.py  config.py  database.py  pyproject.toml  requirements.txt  run.py  server.py
backend/crawler/: .env  Dockerfile  pyproject.toml  requirements.txt
backend/crawler/app/: cleaner.py  compliance.py  config.py  dedup.py  extractor.py  grpc_client.py  health.py  main.py  scheduler.py
backend/crawler/app/spiders/: __init__.py  base.py  devto.py  github_trending.py  hackernews.py  hackernews_ai.py
backend/stats-service/: .env.example  Dockerfile  alembic.ini  init_db.py  pyproject.toml  requirements.txt  run.py
backend/stats-service/app/: __init__.py  main.py
backend/stats-service/app/api/v1/: router.py
backend/stats-service/app/core/: config.py  database.py
backend/stats-service/app/models/: event.py
backend/stats-service/app/schemas/: events.py
backend/stats-service/app/services/: analytics.py
backend/stats-service/migrations/: env.py
backend/stats-service/migrations/versions/: 001_initial.py  002_desktop_community.py
(+264 files in other folders)
