[project]
name = "community-bridge"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.0.0",
    "pydantic-settings>=2.14.0",
    "bcrypt>=4.0.0",
]
