[project]
name = "sven-stats-service"
version = "1.0.0"
description = "Analytics and statistics service for sven platform"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "user-agents>=2.2.0",
]

[tool.uv]
package = false

[[tool.mypy.overrides]]
module = "user_agents"
ignore_missing_imports = true
